@@ -15,6 +15,8 @@ PHP                                                                        NEWS
 - Added support for Apache 2.2 handler in the Windows distro. (Edin)
 - Added pg_field_table() function. (Edin)
 - Add implementation of curl_multi_info_read (Brian)
+- Fixed bug #37394 (substr_compare() returns an error when offset equals 
+  string length). (Ilia)
 - Fixed bug #37392 (Unnecessary call to OCITransRollback() at the end of 
   request). (Tony)
 - Fixed bug #37376 (fastcgi.c compile fail with gcc 2.95.4). (Ilia)
